Prevented iframe from overflowing

--- a/style.css
+++ b/style.css
@@ -87,6 +87,10 @@ main {
     padding-right: 20px;
 }
 
+iframe {
+    width: 100%;
+}
+
 
 /*
 ====================
